[gd_scene load_steps=10 format=2]

[ext_resource path="res://Data/Editor/Camera.gd" type="Script" id=1]
[ext_resource path="res://Data/Shader/General.shader" type="Shader" id=2]
[ext_resource path="res://Data/Editor/Cursor.gd" type="Script" id=3]
[ext_resource path="res://Data/Scenes/PlayerScene.gd" type="Script" id=4]
[ext_resource path="res://Data/Editor/EditorObjects.tscn" type="PackedScene" id=5]
[ext_resource path="res://Data/Editor/MenuBar.tscn" type="PackedScene" id=6]
[ext_resource path="res://Data/Editor/GUILayer.gd" type="Script" id=7]
[ext_resource path="res://Data/Editor/GizmoRenderer.gd" type="Script" id=9]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )
shader_param/toScreen = false
shader_param/canGlow = false
shader_param/invertColors = false
shader_param/glowing_color = Color( 1, 1, 1, 1 )
shader_param/secondary_glowing_color = Color( 1, 1, 1, 1 )
shader_param/brightness = 1.0
shader_param/glowing_intensity = 1.0
shader_param/precision = 0.1
shader_param/opacity = 0.5
shader_param/ditherScale = 1.0

[node name="PlayScene" type="Node2D" groups=["Editor"]]
script = ExtResource( 4 )

[node name="SelectedObject" type="Sprite" parent="." groups=["Cursor"]]
material = SubResource( 1 )
centered = false
script = ExtResource( 3 )

[node name="GUILayer" type="CanvasLayer" parent="."]
layer = 8
script = ExtResource( 7 )

[node name="EditorObjects" parent="GUILayer" instance=ExtResource( 5 )]
anchor_bottom = 0.0
margin_top = 172.0
margin_bottom = 224.0

[node name="MenuBar" parent="GUILayer" instance=ExtResource( 6 )]
margin_bottom = -208.0

[node name="Camera" type="Camera2D" parent="."]
anchor_mode = 0
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource( 1 )

[node name="GizmoRenderer" type="Node2D" parent="."]
script = ExtResource( 9 )
